--- a/src/main/resources/com/wlf/app/main/repositoryView.fxml
+++ b/src/main/resources/com/wlf/app/main/repositoryView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
@@ -64,7 +65,10 @@
             </BorderPane>
             <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                 <center>
-                    <TaskProgressView fx:id="downloadTaskView" retainTasks="true" BorderPane.alignment="CENTER" />
+                    <TaskProgressView fx:id="downloadTaskView" retainTasks="true" BorderPane.alignment="CENTER">
+                  <padding>
+                     <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                  </padding></TaskProgressView>
                 </center>
             </BorderPane>
         </SplitPane>
@@ -99,6 +103,9 @@
                 </HBox>
                 <Button mnemonicParsing="false" onAction="#onClearDownloadList" text="%downloads.clear" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
             </children>
+         <padding>
+            <Insets left="8.0" right="8.0" top="8.0" />
+         </padding>
         </GridPane>
     </bottom>
 </BorderPane>
